librechat/dex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  selector:
    app: dex
  ports:
    - name: http
      port: 5556
      targetPort: http
      protocol: TCP
  type: ClusterIP
