librechat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat
spec:
  selector:
    app: librechat
  ports:
    - name: http
      port: 3080
      targetPort: http
      protocol: TCP
  type: ClusterIP
