librechat/dex-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dex
spec:
  host: librechat-dex.baloise.dev
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: dex
    weight: 100
