librechat/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: librechat
spec:
  host: librechat.baloise.dev
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: librechat
    weight: 100
